@@ -30,9 +30,9 @@ SYNOPSIS
             sub postremove() { ... }
 
 DESCRIPTION
-    Object::Transaction provides transaction support for hash-based objects that
-    are stored one-per-file using Storable. Multiuser access is supported. In
-    the future, serializing methods other than Storable will be supported.
+    Object::Transaction provides transaction support for hash-based objects
+    that are stored one-per-file using Storable. Multiuser access is supported.
+    In the future, serializing methods other than Storable will be supported.
 
     Object::Transaction is a virtual base class. In order to use it, you must
     inherit from it and override the `new' method and the `file' method.
@@ -165,8 +165,8 @@ METHODS PROVIDED
                    loaded and commited.
 
                    In the event of a commit failure, the object cache will be
-                   reset. Do not keep any old references to objects after such a
-                   failure.
+                   reset. Do not keep any old references to objects after such
+                   a failure.
 
     `transaction($funcref,@args)'
                    `transaction()' is a wrapper for a complete transaction.
@@ -209,7 +209,8 @@ METHODS PROVIDED
                    not being modified. `savelater()' takes precedence over
                    `readlock()' so they can be combined freely.
 
-                   Paranoid programmers should use `readlock()' on most objects.
+                   Paranoid programmers should use `readlock()' on most
+                   objects.
 
 REQUIRED METHODS TO OVERRIDE
     The following methods must be overriden.
@@ -218,10 +219,11 @@ REQUIRED METHODS TO OVERRIDE
                    provide one yourself.
 
     `file($ref,$id)'
-                   You must provide a function that returns the filename that an
-                   object is stored in. The `file' method can be invoked in two
-                   ways: as an object method call without an `$id' parameter; or
-                   as a class method call with an `$id' parameter.
+                   You must provide a function that returns the filename that
+                   an object is stored in. The `file' method can be invoked in
+                   two ways: as an object method call without an `$id'
+                   parameter; or as a class method call with an `$id'
+                   parameter.
 
 OPTIONAL METHODS TO OVERRIDE
     The following methods may be overridden.
@@ -241,7 +243,8 @@ OPTIONAL METHODS TO OVERRIDE
                    `preload' is called.
 
 
-    `postload()'   `postload' is invoked after the object has been loaded into
+    `postload($id)'
+                   `postload' is invoked after the object has been loaded into
                    memory but before transaction completeness is checked.
 
                    The underlying file is locked at the time that `postload' is
@@ -258,8 +261,8 @@ OPTIONAL METHODS TO OVERRIDE
 
                    Objects are stored on disk in the file specified by the
                    `file' method. The directory in which that file resides must
-                   exist by the time `presave()' finishes. `presave' should make
-                   the directory if it isn't already made.
+                   exist by the time `presave()' finishes. `presave' should
+                   make the directory if it isn't already made.
 
                    The underlying file may or may not be locked at the time
                    `presave' is invoked.
@@ -291,19 +294,20 @@ OPTIONAL METHODS TO OVERRIDE
 
     `id()'         Object::Transaction expect to be able to find the unique
                    identifier (id) for each object as `$obj-'{'ID'}>. If that
-                   isn't the case, you can override the `id' function to provide
-                   an alternative.
+                   isn't the case, you can override the `id' function to
+                   provide an alternative.
 
 PUBLIC MEMBER DATA
     The following data members are used by Object::Transaction.
 
-    `ID'           Object::Transaction expect to find the id for an object in `$obj-
-                   '{'ID'}>. This can be overridden by defining your own `id'
-                   function.
+    `ID'           Object::Transaction expect to find the id for an object in
+                   `$obj-'{'ID'}>. This can be overridden by defining your own
+                   `id' function.
 
-    `OLD'          When an object is loaded into memory a copy is made. The copy can
-                   be found at `$obj-'{'OLD'}>. The copy should not be modified.
-                   The copy is explicitly passed in `presave' and `postsave'.
+    `OLD'          When an object is loaded into memory a copy is made. The copy
+                   can be found at `$obj-'{'OLD'}>. The copy should not be
+                   modified. The copy is explicitly passed in `presave' and
+                   `postsave'.
 
 PRIVATE MEMBER DATA
     Object::Transaction ads a few data members to each object for its own
@@ -324,8 +328,8 @@ PRIVATE MEMBER DATA
 
 BUGS
     A program or computer crash at just the wrong moment can allow an object
-    that should be deleted to escape deletion. Any future attempt to access such
-    an object will cause it to self-destruct.
+    that should be deleted to escape deletion. Any future attempt to access
+    such an object will cause it to self-destruct.
 
     In some situations objects will be saved even if niether `save()' nor
     `savelater()' is invoked. This happens if `readlock()' is used and the
